2005-05-16  Richard Henderson  <rth@redhat.com>

	* config/i386/sse.md (mulv4si3): New.

2005-05-17  Hans-Peter Nilsson  <hp@axis.com>

	* config/cris/cris.h (EXTRA_CONSTRAINT_T): Remove FIXME and
	tests for noncanonical versions of reg+constant and
	reg+reg*{1,2,4}.

2005-05-16  Richard Henderson  <rth@redhat.com>
	    Steven Bosscher <stevenb@suse.de>

	PR tree-opt/21399
	* tree-eh.c (maybe_clean_or_replace_eh_stmt): Rename from 
	maybe_clean_eh_stmt; take old stmt parameter.  Update EH
	region data structure to match replacement.
	* tree-flow.h: Update to match.
	* tree-ssa-ccp.c (execute_fold_all_builtins): Likewise.
	* tree-ssa-dom.c (optimize_stmt): Likewise.
	* tree-ssa-pre.c (eliminate): Likewise.
	* tree-ssa-propagate.c (substitute_and_fold): Likewise.

2005-05-16  Caroline Tice  <ctice@apple.com>

	* bb-reorder.c (verify_hot_cold_block_grouping):  Replace
	internal_error with gcc_assert.
	* dwarf2out.c (dwarf2out_switch_text_section):  Likewise.
	* function.h (struct function): Remove space between "*" and
	struct field names.
	* varasm.c (initialize_cold_section_name):   Add gcc_assert;
	modify to use alloca.
	(unlikely_text_section): Add check for flag_function_sections.
	(assemble_start_function):  Move call to resolve_section, so it
	comes before first call to unlikely_text_section.
	(assemble_end_function):  Add test and call to function_section
	if appropriate.
	
2005-05-16  Roger Sayle  <roger@eyesopen.com>

	* c-common.c (c_common_truthvalue_conversion): Use fold_build2
	instead of build_binary_op when performing code transformations
	to avoid error messages about constructs not it the user's code.

2005-05-16  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-ssa-pre.c: Fix a comment typo.

2005-05-16  Richard Henderson  <rth@redhat.com>

	PR target/21556
	* config/ia64/ia64.md (load_dtpmod, load_ltoff_dtpmod, load_dtprel,
	load_dtprel64, load_dtprel22, load_dtprel_gd, load_ltoff_dtprel,
	add_dtprel, add_dtprel14, add_dtprel22, load_tprel, load_tprel64,