@@ -1,3 +1,14 @@
+2005-05-17  Jakub Jelinek  <jakub@redhat.com>
+
+	* varasm.c (struct constant_descriptor_tree): Add hash field.
+	(const_desc_hash): Just return hash field.
+	(const_desc_eq): If hash values are different, return 0 immediately.
+	(output_constant_def): Compute hash field of temporary key, use
+	htab_find_slot_with_hash instead of htab_find_slot.  Set hash in
+	newly built constant descriptor.
+	(lookup_constant_def): Compute hash field of temporary key, use
+	htab_find_with_hash instead of htab_find.
+
 2005-05-16  Richard Henderson  <rth@redhat.com>
 
 	* config/i386/sse.md (mulv4si3): New.
